namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confluent-dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
