alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  containers:
  - name: alpine-container
    image: alpine:latest
    command:
      - "/bin/sh"
      - "-c"
      - "sleep infinity"
    stdin: true
    tty: true
