ksqldb-bootstrap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: ksqldb
    platform.confluent.io/namespace: confluent-dev
    platform.confluent.io/type: ksqldb
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: ksqldb-bootstrap
  namespace: confluent-dev
  labels:
    confluent-platform: "true"
    cr-name: ksqldb
    type: ksqldb
spec:
  ports:
  - name: external
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: ksqldb
    clusterId: confluent
    confluent-platform: "true"
    type: ksqldb
  sessionAffinity: None
  type: ClusterIP
